# Lesson_10

Task_1/: CMakeLists.txt  Source.cpp
Task_2/: CMakeLists.txt  RightTr.cpp  Source.cpp  Square.cpp  Triangle.cpp  Triangle.h
