cmake_minimum_required(VERSION 3.10.0)

project(Task)

add_executable(Task_2 Source.cpp Triangle.h Triangle.cpp RightTr.h RightTr.cpp IsoscelesTr.h IsoscelesTr.cpp EquilateralTr.h EquilateralTr.cpp
 Quadrilateral.h Quadrilateral.cpp Rectangle.h Rectangle.cpp Rhomb.h Rhomb.cpp Parallelogram.h Parallelogram.cpp Square.h Square.cpp)
        
 